--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -777,7 +777,7 @@ msgid "Dodaj video"
 msgstr "Add video"
 
 #: notifications/templates.py:167
-msgid "Dodaj aktulną drużynę"
+msgid "Dodaj aktualną drużynę"
 msgstr "Add current team"
 
 #: notifications/templates.py:173
