--- a/locale/uk/LC_MESSAGES/django.po
+++ b/locale/uk/LC_MESSAGES/django.po
@@ -783,7 +783,7 @@ msgid "Dodaj video"
 msgstr "Додати відео"
 
 #: notifications/templates.py:167
-msgid "Dodaj aktulną drużynę"
+msgid "Dodaj aktualną drużynę"
 msgstr "Додати поточну команду"
 
 #: notifications/templates.py:173
